--- a/DialogWizardLib/src/main/res/layout/fragment_second.xml
+++ b/DialogWizardLib/src/main/res/layout/fragment_second.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".lib.wizardlayouts.SecondFragment">
+    tools:context="com.dialog.dialogwizardlib.wizardlayouts.SecondFragment">
 
     <TextView
         android:id="@+id/textview_second"
