--- a/DialogWizardLib/src/main/res/layout/dialogwizardlib_wizard_container.xml
+++ b/DialogWizardLib/src/main/res/layout/dialogwizardlib_wizard_container.xml
@@ -12,4 +12,4 @@ from DialogParentView work
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:defaultNavHost="true"
-    app:navGraph="@navigation/dialogwizardlib_nav_graph" />
+    app:navGraph="@navigation/nav_graph" />
