--- a/DialogWizardLib/src/main/res/layout/fragment_first.xml
+++ b/DialogWizardLib/src/main/res/layout/fragment_first.xml
@@ -17,6 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_first"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        tools:ignore="LabelFor"/>
+
     <Button
         android:id="@+id/button_first"
         android:layout_width="wrap_content"
@@ -26,4 +35,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_first" />
+
+    <!-- NEEDED FOR LIB. OTHERWISE CANT EXIT WIZARD -->
+    <!-- exit fab -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="10dp"
+        app:srcCompat="@drawable/ic_close"
+        android:contentDescription="@string/nullstr" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
