lib: Move 'exit' button to lib

--- a/DialogWizardLib/src/main/res/layout/fragment_second.xml
+++ b/DialogWizardLib/src/main/res/layout/fragment_second.xml
@@ -51,7 +51,7 @@
     <!-- NEEDED FOR LIB. OTHERWISE CANT EXIT WIZARD -->
     <!-- exit fab -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_wizard_exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
