lib: FragmentWizardView$saveCurrentViewState: use parent's tag
instead of which

--- a/DialogWizardLib/src/main/res/layout/fragment_third.xml
+++ b/DialogWizardLib/src/main/res/layout/fragment_third.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:tag="2"
     tools:context="com.dialog.dialogwizardlib.wizardlayouts.ThirdFragment">
 
     <TextView
