--- a/DialogWizardLib/src/main/res/layout/fragment_first.xml
+++ b/DialogWizardLib/src/main/res/layout/fragment_first.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:tag="0"
     tools:context="com.dialog.dialogwizardlib.wizardlayouts.FirstFragment">
 
     <TextView
